# qwen3_asr_rs

./: .gitignore  Cargo.toml  README.md  build.rs  export_to_onnx.py  install.sh  qwen3-asr-server.service  setup_onnx_runtime.sh
.github/workflows/: ci.yml  release.yml
skills/: SKILL.md  install.md
src/: audio.rs  audio_encoder.rs  db.rs  error.rs  inference.rs  layers.rs  lib.rs  main.rs  mel.rs  server.rs  tensor.rs  text_decoder.rs  tokenizer.rs  weights.rs
src/backend/: mod.rs  onnx_backend.rs
src/backend/candle/: array.rs  ffi.rs  io.rs  mod.rs  ops.rs  signal.rs
src/backend/mlx/: ffi.rs  io.rs  mod.rs  ops.rs
