[package]
name = "qwen3_asr"
version = "0.1.8"
edition = "2021"
description = "Pure Rust implementation of Qwen3 ASR (Automatic Speech Recognition) using libtorch"
license = "Apache-2.0"

[[bin]]
name = "asr"
path = "src/main.rs"

[dependencies]
tch = { version = "0.16", optional = true }
tokenizers = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hound = "3.5"
rubato = "0.16"
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
safetensors = "0.5"
ffmpeg-next = { version = "8", optional = true }
ffmpeg-sys-next = { version = "8", optional = true }
memmap2 = "0.9"
clap = { version = "4", features = ["derive"] }
actix-web = "=4.8.0"
actix-multipart = "=0.6.1"
time = "=0.3.36"
rusqlite = { version = "0.32", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
futures-util = "0.3"
tempfile = "3"

[build-dependencies]
cmake = "0.1"

[features]
default = ["tch-backend"]
tch-backend = ["dep:tch"]
mlx = []

# Optional FFmpeg support. Disabled by default — enables decoding of non-WAV formats.
ffmpeg = ["dep:ffmpeg-next", "dep:ffmpeg-sys-next"]

# Advanced: static or build-time FFmpeg options (rare; heavy).
static-ffmpeg = ["ffmpeg-sys-next/static"]
build-ffmpeg = ["ffmpeg-sys-next/build", "static-ffmpeg"]
